@@ -1,5 +1,7 @@
 Linux-PAM NEWS -- history of user-visible changes.
 
+* pam_xauth: Look for xauth executable in multiple places
+
 Release 0.99.1.0
 
 * Use autoconf/automake/libtool
